feat(App): changing app files

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "entryPoint": "./src/App.js",
+    "entryPoint": "./src/App.tsx",
     "name": "Movio",
     "slug": "Movio",
     "version": "1.0.0",
