--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "movio-",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/App.tsx",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
@@ -9,27 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
+    "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "axios": "^0.26.1",
-    "expo": "~44.0.2",
-    "expo-splash-screen": "~0.14.1",
-    "expo-status-bar": "~1.2.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.1",
-    "react-native-webview": "^11.18.1",
+    "expo": "^50.0.17",
+    "expo-splash-screen": "^0.26.5",
+    "expo-status-bar": "~1.11.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-native": "^0.73.6",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-web": "^0.19.11",
+    "react-native-webview": "^13.6.4",
     "react-native-youtube-iframe": "^2.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "^17.0.41",
+    "@types/react": "~18.2.45",
     "@types/react-native": "~0.64.12",
-    "typescript": "~4.3.5"
+    "typescript": "^5.4.5"
   },
   "private": true
 }
